@@ -8,7 +8,7 @@ graphqt documentation
 
 .. toctree::
    :maxdepth: 2
-   :caption: Contents:
+   :caption: Contents: 
 
 .. automodule:: GUView
    :members:
